--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+video{
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.App{
+  background-color: rgba(247, 247, 247, 0.5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10px;
+  
+}
+h1{
+  color: rgb(244, 248, 248);
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 45px;
+  text-shadow: 2px 5px #171616;
+  margin-left: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.search {
+  width: 100%;
+  padding: 12px 24px;
+  background-color: transparent;
+  color: #575756;
+  box-shadow: inset 0px 0px 0px 4px #ddd6e8;
+  }
+  .list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  img{
+    border-radius: 35px;
+   
+  }
+  li{
+    background-color: #ddd6e8;
+    padding: 10px;
+  margin: 5px;
+  list-style-type: none;
+  }
+  button{
+    margin-top: 15px;
+    margin-left: 50px;
+    border-radius: 12px;
+border: none;
+background-color: #def4ff;
+  }
+  .pic{
+    margin-left: 50px;
+    
+  }
+  h2{
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 25px;
+    color:black;
+    text-shadow: 2px 2px rgb(181, 220, 246);
+    margin-left: 50px;
+    
+  }
+  ul,h3{
+    font-family: "Playfair Display", serif;
+    font-size: 15px;
+    margin-left: 50px;
+  }
+  .icon{
+    width: 20px;
+  }
+
+  @media all and (max-width:500px) {
+.container{
+  display: flex;
+  justify-items: center;
+
+}
+img{
+  width:190px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
